--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,58 @@
 .fontProperties {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway ExtraBold', sans-serif;
 	font-size: 48px;
 	color: black;
 	text-transform: uppercase;
 	text-align: center;
-	/*border-bottom: 4px solid #ffcc00;*/
 	text-decoration: underline;
 	text-decoration-color: #ffcc00;
 }
 
-/*-----section id="Carpathian"-----*/
+.button {
+	border-style: solid;
+	border-width: 3px;
+	border-color: #ffcc00;
+	background: transparent;
+	
+	font-family: 'Raleway Bold', sans-serif;
+	font-style: bold;
+	font-size: 24px;
+	text-transform: uppercase;
+
+	padding: 24px 56px;
+}
+
+#carpathian header {
+	max-width: 1140px;
+	text-align: center;
+}
+
+#carpathian header div {
+	float: left;
+	margin-left: 200px;
+	margin-top: 5px;
+	vertical-align: all;
+}
+
 #carpathian {
-	height: 800px;
+	/*height: 800px;*/
 	
 	background-position: center;
-	background-size:auto;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('../img/banner/background.jpeg'); 
 }
 #carpathian h1 {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway ExtraBold', sans-serif;
 	font-style: bold;
 	font-size: 72px;
 		text-align: center;
 		text-transform: uppercase;
 		color: #ffcc00;
-	margin-top: 309px;
+	/*margin-top: 140px;*/
+	padding-top: 170px;
+	clear: both;
+	
 }
 #carpathian h2 {
 	font-family: 'Crimson Text', serif;
@@ -35,79 +62,145 @@
 		text-transform: lowercase;
 		color: white;
 		margin-top: 16px;
+		padding-bottom: 180px;
 }
 
-#carpathian header div > img {
-	/*float: left;*/
+/*#carpathian header div > img {
+	/*float: left;
 	margin-top: 25px;
 	margin-left: 90px;
-}
+}*/
 #carpathian header ul > li {
 	float: right;
 }
 #carpathian header ul > li a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
+	display: inline-block;
+	color: white;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
 	font-size: 12px;
 	padding: 14px 16px;
 }
 
-/*-----section id="About_us"-----*/
+
 #about_us {	
-	height: 750px; 
+	/*height: 750px;*/ 
+	text-align: center;
 
 	background-position: center;
-	background-size:auto;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('../img/about us/background_about_us.jpeg');
-
 }
 
+#about_us h2 {
+padding-top: 122px;
+margin-bottom: 150px;
+}
 
+#about_us p {
+text-align: justify;
+/*max-width: 1014px;
+margin-left: 170px;*/
+margin-left: 286px;
+margin-right: 286px;
+line-height: 1.6;
+font-family: 'CrimsonText Roman', sans-serif;
+font-size: 18px;
+}
+
+#about_us button {
+	margin-top: 94px;
+	margin-bottom: 120px;
+}
+
+#portfolio {
+	text-align: center;
+}
+
+#portfolio p {
+/*text-align: justify;
+max-width: 1014px;
+margin-left: 170px;
+margin-left: 286px;
+margin-right: 286px;*/
+line-height: 1.6;
+font-family: 'CrimsonText Roman', sans-serif;
+font-size: 18px;
+}
+#portfolio div.portfolio_photos {
+	
+	display: flex;   
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+} 
 
 #our_team {	
-	height: 800px;
+	/*height: 800px;*/
 
 	background-position: center;
-	background-size:auto;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('../img/our team/background_our_team.jpg');
 }
 #our_skills {	
-	height: 715px;
+	/*height: 715px;*/
 
 	background-position: center;
-	background-size:auto;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('../img/our skills/background_our_skills.jpg');
 }
 #quote {	
-	height: 420px;
-
+	/*height: 420px;*/
+	
 	background-position: center;
-	background-size:auto;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('../img/quote/background_quote.jpg');
+
+	padding-top: 123px;
+	padding-bottom: 123px;
 }
+
+#quote div.left {
+	text-align: left;
+	}
+#quote p.quote {
+	text-align: center;
+	font-family: 'Crimson Text', serif;
+	font-size: 34px;
+	color: white;
+}
+#quote div.right {
+	text-align: right;
+}
+#quote p.author {
+	text-align: right;
+	font-family: 'Raleway', serif;
+	font-size: 24px;
+	color: white;
+}
+
+
 #pricing {	
-	height: 900px;
+	/*height: 900px;*/
 
 	background-position: center;
-	background-size:auto;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('../img/pricing/background_pricing.jpg');
 }
 
-/*-----section id="form"-----*/
+
 #form {
 	text-align: center;
 	padding-top: 5px;
 	font-family: 'Raleway', sans-serif;
 		background-position: center;
-		background-size:auto;
+		background-size: cover;
 		background-repeat: no-repeat;
 		background-image: url('../img/contact_us/background.png');
 }
@@ -116,15 +209,11 @@
 	font-style: bold;
 	font-size: 48px;
 	color: #fff;
-	/*border-bottom-color: #f4c60b;
-	border-bottom-style: solid;
-	padding-bottom: 2px;*/
 		text-align: center;
 		text-transform: uppercase;
 		text-decoration: underline;
 		text-decoration-color: #ffcc00;
-
-		}
+}
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
 	color: white;
@@ -177,7 +266,6 @@
 		cursor: pointer;
 	}
 
-/*-----<footer>-----*/
 footer {
 	padding-top: 54px;
 	padding-bottom: 20px;
@@ -211,4 +299,3 @@ footer {
 		text-transform: none;
 		letter-spacing: 2px
 	}
-/*----------*/
