--- a/app/less/portfolio.less
+++ b/app/less/portfolio.less
@@ -1,21 +1,33 @@
+#portfolio h2 {
+	padding-top: 122px;
+	margin-bottom: 0px;
+}
+
 #portfolio {
 	text-align: center;
 }
 
 #portfolio p {
-/*text-align: justify;
-max-width: 1014px;
-margin-left: 170px;
-margin-left: 286px;
-margin-right: 286px;*/
+margin: 40px;
 line-height: 1.6;
 font-family: 'CrimsonText Roman', sans-serif;
 font-size: 18px;
 }
+
+#portfolio div.btn-group {
+	margin-bottom: 40px;	
+} 
+
+
 #portfolio div.portfolio_photos {
-	
 	display: flex;   
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+	
 } 
+
+#portfolio button {
+	margin-top: 94px;
+	margin-bottom: 120px;
+}
