--- a/app/css/about_us.css
+++ b/app/css/about_us.css
@@ -1,5 +1,4 @@
 #about_us {
-  /*height: 750px;*/
   text-align: center;
   background-position: center;
   -webkit-background-size: cover;
@@ -7,14 +6,16 @@
   background-repeat: no-repeat;
   background-image: url('../img/about us/background_about_us.jpeg');
 }
+.section_name_position {
+  padding-top: 122px;
+  margin-bottom: 150px;
+}
 #about_us h2 {
   padding-top: 122px;
   margin-bottom: 150px;
 }
 #about_us p {
   text-align: justify;
-  /*max-width: 1014px;
-margin-left: 170px;*/
   margin-left: 286px;
   margin-right: 286px;
   line-height: 1.6;
