--- a/app/css/from_blog.css
+++ b/app/css/from_blog.css
@@ -2,7 +2,7 @@
   padding-top: 122px;
   margin-bottom: 150px;
 }
-#services h2 {
+#from_blog h2 {
   padding-top: 122px;
   margin-bottom: 150px;
 }
