--- a/app/css/our_clients.css
+++ b/app/css/our_clients.css
@@ -1,147 +1,36 @@
-.fontProperties {
-  font-family: 'Raleway ExtraBold', sans-serif;
-  font-size: 48px;
-  color: black;
-  text-transform: uppercase;
+.section_name_position {
+  padding-top: 122px;
+  margin-bottom: 150px;
+}
+#our_clients h2 {
+  padding-top: 122px;
+  margin-bottom: 150px;
+}
+#our_clients {
   text-align: center;
-  text-decoration: underline;
-  -webkit-text-decoration-color: #ffcc00;
-          text-decoration-color: #ffcc00;
 }
-.button {
-  border-style: solid;
-  border-width: 3px;
-  border-color: #ffcc00;
-  background: transparent;
-  font-family: 'Raleway Bold', sans-serif;
-  font-style: bold;
-  font-size: 24px;
-  text-transform: uppercase;
-  padding: 24px 56px;
+#our_clients div.clients_logo {
+  margin-bottom: 40px;
 }
-#form {
-  text-align: center;
-  padding-top: 5px;
-  font-family: 'Raleway', sans-serif;
-  background-position: center;
-  -webkit-background-size: cover;
-          background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url('../img/contact_us/background.png');
+#our_clients div.clients_logo {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-color: grey;
 }
-#form h2 {
-  font-style: bold;
-  font-size: 48px;
-  color: #fff;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: underline;
-  -webkit-text-decoration-color: #ffcc00;
-          text-decoration-color: #ffcc00;
-}
-::-webkit-input-placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: white;
-  opacity: 1;
-  /* Firefox */
-}
-::-moz-placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: white;
-  opacity: 1;
-  /* Firefox */
-}
-:-ms-input-placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: white;
-  opacity: 1;
-  /* Firefox */
-}
-::-ms-input-placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: white;
-  opacity: 1;
-  /* Firefox */
-}
-::placeholder {
-  /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: white;
-  opacity: 1;
-  /* Firefox */
-}
-:-ms-input-placeholder {
-  /* Internet Explorer 10-11 */
-  color: white;
-}
-::-ms-input-placeholder {
-  /* Microsoft Edge */
-  color: white;
-}
-#form input {
-  padding-left: 10px;
-  text-align: left;
-  color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #fff;
-  background: transparent;
-  text-transform: uppercase;
-}
-#form textarea {
-  color: white;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #fff;
-  margin-top: 5px;
-  resize: none;
-  overflow: auto;
-  background: transparent;
-  text-transform: uppercase;
-}
-#form input[type='submit'] {
-  position: relative;
-  right: 172px;
-  width: 160px;
-  padding: 16px 22px 16px 20px;
-  margin-bottom: 4px;
-  border: none;
-  background: #f4c60b;
-  font-size: 10px;
-  color: black;
-  font-weight: bold;
-  text-align: center;
-  cursor: pointer;
-}
-footer {
-  padding-top: 54px;
-  padding-bottom: 20px;
-  background-color: #303030;
-  text-align: center;
-  color: white;
-}
-footer h2 {
-  margin: 18px,0px,0px,0px;
-  padding: 0px;
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-size: 24px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-footer span {
-  margin-top: 0px;
-  padding-top: 0px;
-  font-family: 'Crimson Text', serif;
-  font-style: italic;
-  font-size: 12px;
-  text-transform: lowercase;
-  letter-spacing: 2px;
-}
-footer h3 {
-  padding-top: 20px;
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
-  font-size: 12px;
-  text-transform: none;
-  letter-spacing: 2px;
+#our_clients {
+  margin-top: 94px;
+  margin-bottom: 120px;
 }
