--- a/app/css/our_team.css
+++ b/app/css/our_team.css
@@ -1,8 +1,34 @@
 #our_team {
-  /*height: 800px;*/
+  padding: 12px 180px 12px 180px;
   background-position: center;
   -webkit-background-size: cover;
           background-size: cover;
   background-repeat: no-repeat;
   background-image: url('../img/our team/background_our_team.jpg');
+  overflow: hidden;
+}
+#our_team h2 {
+  padding-bottom: 40px;
+}
+#our_team div.card {
+  float: left;
+  width: 33.3%;
+  background-color: transparent;
+  margin-top: 0px;
+  padding: 12px 28px 12px 28px;
+  border: none;
+}
+#our_team div h2.cardname {
+  font-family: 'Raleway ExtraBold', sans-serif;
+  font-size: 24px;
+  text-align: center;
+  text-transform: uppercase;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+#our_team div p.title {
+  text-align: center;
+  text-transform: lowercase;
+  padding-top: 0px;
+  padding-bottom: 12px;
 }
