--- a/app/less/our_clients.less
+++ b/app/less/our_clients.less
@@ -1,128 +1,38 @@
-.fontProperties {
-	font-family: 'Raleway ExtraBold', sans-serif;
-	font-size: 48px;
-	color: black;
-	text-transform: uppercase;
-	text-align: center;
-	text-decoration: underline;
-	text-decoration-color: #ffcc00;
+.section_name_position {
+	padding-top: 122px;
+	margin-bottom: 150px;
 }
 
-.button {
-	border-style: solid;
-	border-width: 3px;
-	border-color: #ffcc00;
-	background: transparent;
+#our_clients h2 {
+	.section_name_position();
+}
+
+#our_clients {
+	text-align: center;
+}
+
+//#our_clients p {
+//margin: 40px;
+//line-height: 1.6;
+//font-family: 'CrimsonText Roman', sans-serif;
+//font-size: 18px;
+//}
+
+#our_clients div.clients_logo {
+	margin-bottom: 40px;	
+} 
+
+
+#our_clients div.clients_logo {
+	display: flex;   
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	border-color: grey;
 	
-	font-family: 'Raleway Bold', sans-serif;
-	font-style: bold;
-	font-size: 24px;
-	text-transform: uppercase;
+} 
 
-	padding: 24px 56px;
+#our_clients {
+	margin-top: 94px;
+	margin-bottom: 120px;
 }
-
-#form {
-	text-align: center;
-	padding-top: 5px;
-	font-family: 'Raleway', sans-serif;
-		background-position: center;
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-image: url('../img/contact_us/background.png');
-}
-
-#form h2 {
-	font-style: bold;
-	font-size: 48px;
-	color: #fff;
-		text-align: center;
-		text-transform: uppercase;
-		text-decoration: underline;
-		text-decoration-color: #ffcc00;
-}
-
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-	color: white;
-	opacity: 1; /* Firefox */
-	}
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-	color: white;
-	}
-
-::-ms-input-placeholder { /* Microsoft Edge */
-	color: white;
-	}
-
-
-	#form input {
-		padding-left: 10px;
-		text-align: left;
-		color: white; 
-		border-style: solid;
-		border-width: 1px;
-		border-color: #fff;
-		background: transparent;
-		text-transform: uppercase;
-	}
-
-	#form textarea {
-		color: white;
-		border-style: solid;
-		border-width: 1px;
-		border-color: #fff;
-		margin-top: 5px;
-		resize: none;
-		overflow:auto;
-		background: transparent;
-		text-transform: uppercase;
-	}
-	
-	#form input[type='submit'] {
-		position: relative;
-		right: 172px;
-		width: 160px; 
-		padding: 16px 22px 16px 20px;
-		margin-bottom: 4px;
-		border: none;
-		background: #f4c60b;
-		font-size: 10px;
-		color: black;
-		font-weight: bold;
-		text-align: center;
-		cursor: pointer;
-	}
-
-footer {
-	padding-top: 54px;
-	padding-bottom: 20px;
-	background-color: rgb(48,48,48);
-	text-align: center;
-	color: white;
-}
-	footer h2 {
-		margin: 18px,0px,0px,0px; 
-		padding: 0px;
-		font-family: 'Raleway', sans-serif;
-		font-style: normal;
-		font-size: 24px;
-		text-transform: uppercase;
-		letter-spacing: 1px
-	}
-	footer span {
-		margin-top: 0px; 
-		padding-top: 0px;
-		font-family: 'Crimson Text', serif;
-		font-style: italic;
-		font-size: 12px;
-		text-transform: lowercase;
-		letter-spacing: 2px
-	}
-	footer h3 {
-		padding-top: 20px;
-		font-family: 'Raleway', sans-serif;
-		font-style: normal;
-		font-size: 12px;
-		text-transform: none;
-		letter-spacing: 2px
-	}
