--- a/app/less/our_skills.less
+++ b/app/less/our_skills.less
@@ -1,8 +1,15 @@
-@our_skills {	
-	/*height: 715px;*/
-
+#our_skills {	
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('../img/our skills/background_our_skills.jpg');
+}
+
+.section_name_position {
+	padding-top: 122px;
+	margin-bottom: 150px;
+}
+
+#our_skills h2 {
+	.section_name_position();
 }
