--- a/app/less/pricing.less
+++ b/app/less/pricing.less
@@ -1,8 +1,15 @@
 #pricing {	
-	/*height: 900px;*/
-
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-image: url('../img/pricing/background_pricing.jpg');
+}
+
+.section_name_position {
+	padding-top: 122px;
+	margin-bottom: 150px;
+}
+
+#pricing h2 {
+	.section_name_position();
 }
