--- a/main.less
+++ b/main.less
@@ -95,6 +95,9 @@ outline: none;
 @import "footer";
 
 @media screen and (max-width:980px) {
+	#carpathian ul {
+		display: none;
+   }
 	#quote {
 		width: 100%;
 	}
@@ -118,6 +121,34 @@ outline: none;
 	
 }
 
+@media screen and (max-width:470px) {
+	#carpathian h1 {
+		font-size: 64px;
+	}
+}
+
+@media screen and (max-width:419px) {
+	#carpathian h1 {
+		font-size: 60px;
+	}
+}
+
+@media screen and (max-width:392px) {
+	#carpathian h1 {
+		font-size: 56px;
+	}
+}
+
+@media screen and (max-width:370px) {
+	#carpathian h1 {
+		font-size: 50px;
+	}
+}
+@media screen and (max-width:330px) {
+	#carpathian h1 {
+		font-size: 46px;
+	}
+}
 @media screen and (max-width:320px) {
 	#quote {
 		width: 320px;
