--- a/main.less
+++ b/main.less
@@ -86,6 +86,7 @@ outline: none;
 @import "portfolio";
 @import "our_team";
 @import "our_skills";
+@import "progresscircle";
 @import "quote";
 @import "services";
 @import "pricing";
@@ -118,7 +119,6 @@ outline: none;
 	#quote {
 		width: 100%;
 	}
-	
 }
 
 @media screen and (max-width:470px) {
